# gt_map

./: README.md  pyproject.toml
examples/: 3D_conn_viz.ipynb  abide_map.py  adhd200_map.py  usage_example.ipynb  vizualize_atlas.ipynb
gt_map/: __init__.py  config.py  core.py  utils.py  viz.py  viz_2d.py  viz_3d.py
gt_map/data/: README.md  roi_labels.csv  roi_networks.csv
