[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gt-map"
version = "0.1.0"
description = "Standardized fMRI parcellation using Glasser + Tian atlases (414 ROIs)"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "CIMT", email = "cimt@informatik.uni-augsburg.de"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "nilearn>=0.9.0",
    "scipy>=1.7",
    "joblib>=1.1",
]

[project.optional-dependencies]
viz = [
    "plotly>=5.0",
    "matplotlib>=3.5",
    "kaleido>=0.2.0"  # for static image export (PNG/SVG/PDF)
]

[project.urls]
Homepage = "https://github.com/cimt-unia/gt_map"
Repository = "https://github.com/cimt-unia/gt_map.git"

[tool.setuptools.package-data]
gt_map = ["data/*.nii", "data/*.nii.gz", "data/*.csv", "data/*.md"]
